code style commit

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 
         <div class="about-me-field">
             <p class="about-me-text">Hi!</p>
-            <p class="about-me-text">I'm self-taught Front end Developer. Have fun learning new and to improve my skills to become a FE
+            <p class="about-me-text">I'm self-taught Front end Developer. Have fun learning new and to improve my skills
+                to become a FE
                 ninja.</p>
         </div>
     </div>
@@ -86,7 +87,8 @@
                     watched plenty of online courses and read tons of documentation.</p>
                 <p class="section-card">Used technologies: HTML, CSS, JavaScript, jQuery, jQuery Quiz Plugin</p>
                 <div class="project-link">
-                    <a class="text-decoration-remover" href="https://github.com/YanaTrifonova/moonProject" target="_blank">
+                    <a class="text-decoration-remover" href="https://github.com/YanaTrifonova/moonProject"
+                       target="_blank">
                         <img class="project-link-img" src="img/external-link.svg">Watch on Github</a>
                 </div>
             </div>
@@ -99,7 +101,8 @@
                 <p class="section-card">desc.</p>
                 <p class="section-card">Used technologies: HTML, SCSS, </p>
                 <div class="project-link">
-                    <a class="text-decoration-remover" href="https://github.com/YanaTrifonova/cocktail_blog" target="_blank">
+                    <a class="text-decoration-remover" href="https://github.com/YanaTrifonova/cocktail_blog"
+                       target="_blank">
                         <img class="project-link-img" src="img/external-link.svg">Watch on Github</a>
                 </div>
             </div>
