--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 <body>
 
 <main id="main">
-    <header class="header-container">
+    <header class="header-container header-decoration">
         <div class="header-block-left">
             <a href="#main" class="header-text text-decoration-remover">Trifonova Yana</a>
         </div>
 
         <div class="header-block-right">
             <a href="#about-me" class="header-text text-decoration-remover">About me</a>
+            <a href="#timeline" class="header-text text-decoration-remover">Timeline</a>
             <a href="#portfolio" class="header-text text-decoration-remover">Portfolio</a>
-            <a class="header-text text-decoration-remover">Timeline</a>
         </div>
     </header>
 
@@ -46,20 +46,20 @@
 
         <div class="intro-social">
             <a class="text-decoration-remover" target="_blank" href="https://github.com/YanaTrifonova">
-                <img class="intro-social-img" onmouseover="onOver(this, 'github');" onmouseout="onOut(this, 'github');"
+                <img class="social-img" onmouseover="onOver(this, 'github');" onmouseout="onOut(this, 'github');"
                      src="img/github_dark.svg" alt="github">
             </a>
             <a class="text-decoration-remover" target="_blank"
                href="https://www.linkedin.com/in/yana-trifonova-0920b3179/">
-                <img class="intro-social-img" onmouseover="onOver(this, 'linkedin');"
+                <img class="social-img" onmouseover="onOver(this, 'linkedin');"
                      onmouseout="onOut(this, 'linkedin');" src="img/linkedin_dark.svg" alt="linked in">
             </a>
             <a class="text-decoration-remover" target="_blank" href="https://www.instagram.com/yana_trifonova/">
-                <img class="intro-social-img" onmouseover="onOver(this, 'instagram');"
+                <img class="social-img" onmouseover="onOver(this, 'instagram');"
                      onmouseout="onOut(this, 'instagram');" src="img/instagram_dark.svg" alt="instagram">
             </a>
             <a class="text-decoration-remover" href="mailto: trifonova.yana.prof@gmail.com">
-                <img class="intro-social-img" onmouseover="onOver(this, 'mail');" onmouseout="onOut(this, 'mail');"
+                <img class="social-img" onmouseover="onOver(this, 'mail');" onmouseout="onOut(this, 'mail');"
                      src="img/mail_dark.svg" alt="e-mail">
             </a>
         </div>
@@ -80,11 +80,147 @@
         </div>
     </div>
 
+    <div class="timeline-container">
+        <p id="timeline" class="section-title">Timeline</p>
+
+        <div class="timeline-cards">
+            <div class="timeline-card-container">
+                <div class="timeline-img-item timeline-img-item-left">
+                    <div class="timeline-img-item-decor card-decoration">
+                        <img class="timeline-img" src="img/timeline/born.svg">
+                    </div>
+                </div>
+
+                <div class="timeline-card timeline-card-left card-decoration">
+                    <p class="timeline-title-text">August 1993</p>
+                    <p class="timeline-description-text">I was born in Yaroslavl.</p>
+                </div>
+            </div>
+
+            <div class="timeline-card-container">
+                <div class="timeline-img-item timeline-img-item-right">
+                    <div class="timeline-img-item-decor card-decoration">
+                        <img src="favicon.ico">
+                    </div>
+                </div>
+
+                <div class="timeline-card timeline-card-right card-decoration">
+                    <p class="timeline-title-text">September 2000 - June 2010</p>
+                    <p class="timeline-description-text">Graduated from school</p>
+                </div>
+            </div>
+
+            <div class="timeline-card-container">
+                <div class="timeline-img-item timeline-img-item-left">
+                    <div class="timeline-img-item-decor card-decoration">
+                        <img class="timeline-img" src="img/timeline/born.svg">
+                    </div>
+                </div>
+
+                <div class="timeline-card timeline-card-left card-decoration">
+                    <p class="timeline-title-text">July 2014</p>
+                    <p class="timeline-description-text">Got degree in economics.</p>
+                </div>
+            </div>
+
+            <div class="timeline-card-container">
+                <div class="timeline-img-item timeline-img-item-right">
+                    <div class="timeline-img-item-decor card-decoration">
+                        <img src="favicon.ico">
+                    </div>
+                </div>
+
+                <div class="timeline-card timeline-card-right card-decoration">
+                    <p class="timeline-title-text">April 2014 - September 2017</p>
+                    <p class="timeline-description-text">Worked for Gazprom</p>
+                </div>
+            </div>
+
+            <div class="timeline-card-container">
+                <div class="timeline-img-item timeline-img-item-left">
+                    <div class="timeline-img-item-decor card-decoration">
+                        <img class="timeline-img" src="img/timeline/born.svg">
+                    </div>
+                </div>
+
+                <div class="timeline-card timeline-card-left card-decoration">
+                    <p class="timeline-title-text">jsnfks 2893</p>
+                    <p class="timeline-description-text">sjldfnkjsfnvsfv</p>
+                </div>
+            </div>
+
+            <div class="timeline-card-container">
+                <div class="timeline-img-item timeline-img-item-right">
+                    <div class="timeline-img-item-decor card-decoration">
+                        <img src="favicon.ico">
+                    </div>
+                </div>
+
+                <div class="timeline-card timeline-card-right card-decoration">
+                    <p class="timeline-title-text">kasnvnsv 3290</p>
+                    <p class="timeline-description-text">skjvnksjdfnvkjsdnfv akndjsnkjsdn</p>
+                </div>
+            </div>
+
+            <div class="timeline-card-container">
+                <div class="timeline-img-item timeline-img-item-left">
+                    <div class="timeline-img-item-decor card-decoration">
+                        <img class="timeline-img" src="img/timeline/born.svg">
+                    </div>
+                </div>
+
+                <div class="timeline-card timeline-card-left card-decoration">
+                    <p class="timeline-title-text">jsnfks 2893</p>
+                    <p class="timeline-description-text">sjldfnkjsfnvsfv</p>
+                </div>
+            </div>
+
+            <div class="timeline-card-container">
+                <div class="timeline-img-item timeline-img-item-right">
+                    <div class="timeline-img-item-decor card-decoration">
+                        <img src="favicon.ico">
+                    </div>
+                </div>
+
+                <div class="timeline-card timeline-card-right card-decoration">
+                    <p class="timeline-title-text">kasnvnsv 3290</p>
+                    <p class="timeline-description-text">skjvnksjdfnvkjsdnfv akndjsnkjsdn</p>
+                </div>
+            </div>
+
+            <div class="timeline-card-container">
+                <div class="timeline-img-item timeline-img-item-left">
+                    <div class="timeline-img-item-decor card-decoration">
+                        <img class="timeline-img" src="img/timeline/born.svg">
+                    </div>
+                </div>
+
+                <div class="timeline-card timeline-card-left card-decoration">
+                    <p class="timeline-title-text">jsnfks 2893</p>
+                    <p class="timeline-description-text">sjldfnkjsfnvsfv</p>
+                </div>
+            </div>
+
+            <div class="timeline-card-container">
+                <div class="timeline-img-item timeline-img-item-right">
+                    <div class="timeline-img-item-decor card-decoration">
+                        <img src="favicon.ico">
+                    </div>
+                </div>
+
+                <div class="timeline-card timeline-card-right card-decoration">
+                    <p class="timeline-title-text">kasnvnsv 3290</p>
+                    <p class="timeline-description-text">skjvnksjdfnvkjsdnfv akndjsnkjsdn</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="portfolio-container">
         <p id="portfolio" class="section-title">Portfolio</p>
 
         <div class="portfolio-cards-container">
-            <div class="card">
+            <div class="card card-decoration">
                 <p class="project-name">Moon Project</p>
                 <div class="project-img-holder">
                     <img class="project-img" src="img/moon_project.jpg">
@@ -93,13 +229,13 @@
                     watched plenty of online courses and read tons of documentation.</p>
                 <p class="section-card">Used technologies: HTML, CSS, JavaScript, jQuery, jQuery Quiz Plugin</p>
                 <div class="project-link">
-                    <a class="text-decoration-remover" href="https://github.com/YanaTrifonova/moonProject"
+                    <a class="text-decoration-remover text-decoration-underline" href="https://github.com/YanaTrifonova/moonProject"
                        target="_blank">
                         <img class="project-link-img" src="img/external-link.svg">Watch on Github</a>
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card card-decoration">
                 <p class="project-name">Cocktail blog</p>
                 <div class="project-img-holder">
                     <img class="project-img" src="img/shark_logo.png">
@@ -107,13 +243,13 @@
                 <p class="section-card">desc.</p>
                 <p class="section-card">Used technologies: HTML, SCSS, </p>
                 <div class="project-link">
-                    <a class="text-decoration-remover" href="https://github.com/YanaTrifonova/cocktail_blog"
+                    <a class="text-decoration-remover text-decoration-underline" href="https://github.com/YanaTrifonova/cocktail_blog"
                        target="_blank">
                         <img class="project-link-img" src="img/external-link.svg">Watch on Github</a>
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card card-decoration">
                 <p class="project-name">Burger</p>
                 <div class="project-img-holder">
                     <img class="project-img" src="img/unnamed.png">
@@ -121,12 +257,35 @@
                 <p class="section-card">desc.</p>
                 <p class="section-card">Used technologies: HTML, Typescript, CSS, React, Redux</p>
                 <div class="project-link">
-                    <a class="text-decoration-remover">
+                    <a class="text-decoration-remover text-decoration-underline">
                         <img class="project-link-img" src="img/external-link.svg">Watch on Github (still in development)</a>
                 </div>
             </div>
         </div>
     </div>
+
+    <footer class="footer-container footer-decoration">
+        <p class="footer-contact-me-text">Contact me:</p>
+        <div class="footer-social">
+            <a class="text-decoration-remover" target="_blank" href="https://github.com/YanaTrifonova">
+                <img class="social-img" onmouseover="onOver(this, 'github');" onmouseout="onOut(this, 'github');"
+                     src="img/github_dark.svg" alt="github">
+            </a>
+            <a class="text-decoration-remover" target="_blank"
+               href="https://www.linkedin.com/in/yana-trifonova-0920b3179/">
+                <img class="social-img" onmouseover="onOver(this, 'linkedin');"
+                     onmouseout="onOut(this, 'linkedin');" src="img/linkedin_dark.svg" alt="linked in">
+            </a>
+            <a class="text-decoration-remover" target="_blank" href="https://www.instagram.com/yana_trifonova/">
+                <img class="social-img" onmouseover="onOver(this, 'instagram');"
+                     onmouseout="onOut(this, 'instagram');" src="img/instagram_dark.svg" alt="instagram">
+            </a>
+            <a class="text-decoration-remover" href="mailto: trifonova.yana.prof@gmail.com">
+                <img class="social-img" onmouseover="onOver(this, 'mail');" onmouseout="onOut(this, 'mail');"
+                     src="img/mail_dark.svg" alt="e-mail">
+            </a>
+        </div>
+    </footer>
 </main>
 
 </body>
