added animation to timeline card and image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <script src="js/changeSocialLogo.js"></script>
     <script src="js/removeMouseHintOnScroll.js"></script>
+    <script src="js/addAnimationToTimeline.js"></script>
 </head>
 
 <body>
@@ -85,130 +86,130 @@
 
         <div class="timeline-cards">
             <div class="timeline-card-container">
-                <div class="timeline-img-item timeline-img-item-left">
+                <div id="timeline-img-item1" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
                         <img class="timeline-img" src="img/timeline/born.svg">
                     </div>
                 </div>
 
-                <div class="timeline-card timeline-card-left card-decoration">
+                <div id="timeline-card1" class="timeline-card timeline-card-left card-decoration">
                     <p class="timeline-title-text">August 1993</p>
                     <p class="timeline-description-text">I was born in Yaroslavl.</p>
                 </div>
             </div>
 
             <div class="timeline-card-container">
-                <div class="timeline-img-item timeline-img-item-right">
+                <div id="timeline-img-item2" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
                         <img src="favicon.ico">
                     </div>
                 </div>
 
-                <div class="timeline-card timeline-card-right card-decoration">
+                <div id="timeline-card2" class="timeline-card timeline-card-right card-decoration">
                     <p class="timeline-title-text">September 2000 - June 2010</p>
                     <p class="timeline-description-text">Graduated from school</p>
                 </div>
             </div>
 
             <div class="timeline-card-container">
-                <div class="timeline-img-item timeline-img-item-left">
+                <div id="timeline-img-item3" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
                         <img class="timeline-img" src="img/timeline/born.svg">
                     </div>
                 </div>
 
-                <div class="timeline-card timeline-card-left card-decoration">
+                <div id="timeline-card3" class="timeline-card timeline-card-left card-decoration">
                     <p class="timeline-title-text">July 2014</p>
                     <p class="timeline-description-text">Got degree in economics.</p>
                 </div>
             </div>
 
             <div class="timeline-card-container">
-                <div class="timeline-img-item timeline-img-item-right">
+                <div id="timeline-img-item4" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
                         <img src="favicon.ico">
                     </div>
                 </div>
 
-                <div class="timeline-card timeline-card-right card-decoration">
+                <div id="timeline-card4" class="timeline-card timeline-card-right card-decoration">
                     <p class="timeline-title-text">April 2014 - September 2017</p>
                     <p class="timeline-description-text">Worked for Gazprom</p>
                 </div>
             </div>
 
             <div class="timeline-card-container">
-                <div class="timeline-img-item timeline-img-item-left">
+                <div id="timeline-img-item5" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
                         <img class="timeline-img" src="img/timeline/born.svg">
                     </div>
                 </div>
 
-                <div class="timeline-card timeline-card-left card-decoration">
+                <div id="timeline-card5" class="timeline-card timeline-card-left card-decoration">
                     <p class="timeline-title-text">jsnfks 2893</p>
                     <p class="timeline-description-text">sjldfnkjsfnvsfv</p>
                 </div>
             </div>
 
             <div class="timeline-card-container">
-                <div class="timeline-img-item timeline-img-item-right">
+                <div id="timeline-img-item6" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
                         <img src="favicon.ico">
                     </div>
                 </div>
 
-                <div class="timeline-card timeline-card-right card-decoration">
+                <div id="timeline-card6" class="timeline-card timeline-card-right card-decoration">
                     <p class="timeline-title-text">kasnvnsv 3290</p>
                     <p class="timeline-description-text">skjvnksjdfnvkjsdnfv akndjsnkjsdn</p>
                 </div>
             </div>
 
             <div class="timeline-card-container">
-                <div class="timeline-img-item timeline-img-item-left">
+                <div id="timeline-img-item7" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
                         <img class="timeline-img" src="img/timeline/born.svg">
                     </div>
                 </div>
 
-                <div class="timeline-card timeline-card-left card-decoration">
+                <div id="timeline-card7" class="timeline-card timeline-card-left card-decoration">
                     <p class="timeline-title-text">jsnfks 2893</p>
                     <p class="timeline-description-text">sjldfnkjsfnvsfv</p>
                 </div>
             </div>
 
             <div class="timeline-card-container">
-                <div class="timeline-img-item timeline-img-item-right">
+                <div id="timeline-img-item8" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
                         <img src="favicon.ico">
                     </div>
                 </div>
 
-                <div class="timeline-card timeline-card-right card-decoration">
+                <div id="timeline-card8" class="timeline-card timeline-card-right card-decoration">
                     <p class="timeline-title-text">kasnvnsv 3290</p>
                     <p class="timeline-description-text">skjvnksjdfnvkjsdnfv akndjsnkjsdn</p>
                 </div>
             </div>
 
             <div class="timeline-card-container">
-                <div class="timeline-img-item timeline-img-item-left">
+                <div id="timeline-img-item9" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
                         <img class="timeline-img" src="img/timeline/born.svg">
                     </div>
                 </div>
 
-                <div class="timeline-card timeline-card-left card-decoration">
+                <div id="timeline-card9" class="timeline-card timeline-card-left card-decoration">
                     <p class="timeline-title-text">jsnfks 2893</p>
                     <p class="timeline-description-text">sjldfnkjsfnvsfv</p>
                 </div>
             </div>
 
             <div class="timeline-card-container">
-                <div class="timeline-img-item timeline-img-item-right">
+                <div id="timeline-img-item10" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
                         <img src="favicon.ico">
                     </div>
                 </div>
 
-                <div class="timeline-card timeline-card-right card-decoration">
+                <div id="timeline-card10" class="timeline-card timeline-card-right card-decoration">
                     <p class="timeline-title-text">kasnvnsv 3290</p>
                     <p class="timeline-description-text">skjvnksjdfnvkjsdnfv akndjsnkjsdn</p>
                 </div>
@@ -229,7 +230,8 @@
                     watched plenty of online courses and read tons of documentation.</p>
                 <p class="section-card">Used technologies: HTML, CSS, JavaScript, jQuery, jQuery Quiz Plugin</p>
                 <div class="project-link">
-                    <a class="text-decoration-remover text-decoration-underline" href="https://github.com/YanaTrifonova/moonProject"
+                    <a class="text-decoration-remover text-decoration-underline"
+                       href="https://github.com/YanaTrifonova/moonProject"
                        target="_blank">
                         <img class="project-link-img" src="img/external-link.svg">Watch on Github</a>
                 </div>
@@ -243,7 +245,8 @@
                 <p class="section-card">desc.</p>
                 <p class="section-card">Used technologies: HTML, SCSS, </p>
                 <div class="project-link">
-                    <a class="text-decoration-remover text-decoration-underline" href="https://github.com/YanaTrifonova/cocktail_blog"
+                    <a class="text-decoration-remover text-decoration-underline"
+                       href="https://github.com/YanaTrifonova/cocktail_blog"
                        target="_blank">
                         <img class="project-link-img" src="img/external-link.svg">Watch on Github</a>
                 </div>
