--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="description" content="my website">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/style.css">
 
     <link rel="icon" type="image/png" href="favicon.ico"/>
 
-    <script src="js/changeSocialLogoOnMouseEnter.js"></script>
-    <script src="js/changeSocialLogoOnMouseOut.js"></script>
-    <script src="js/removeMouseHintOnScroll.js"></script>
-    <script src="js/addAnimationToTimeline.js"></script>
-    <script src="js/onThemeChange.js"></script>
+    <script src="scripts/changeSocialLogoOnMouseEnter.js"></script>
+    <script src="scripts/changeSocialLogoOnMouseOut.js"></script>
+    <script src="scripts/removeMouseHintOnScroll.js"></script>
+    <script src="scripts/addAnimationToTimeline.js"></script>
+    <script src="scripts/onThemeChange.js"></script>
 </head>
 
 <body id="body" class="theme-light">
@@ -28,7 +28,7 @@
         </div>
 
         <button class="header-theme-changer" onclick="onThemeChange()">
-            <img class="header-theme-changer-img" src="img/brightness.svg" alt="Change theme color">
+            <img class="header-theme-changer-img" src="images/brightness.svg" alt="Change theme color">
         </button>
 
         <div class="header-block-right">
@@ -40,7 +40,7 @@
 
     <div class="intro-container">
         <div class="intro-avatar">
-            <img class="intro-img" src="img/avatar.jpg" alt="Yana Trifonova">
+            <img class="intro-img" src="images/avatar.jpg" alt="Yana Trifonova">
         </div>
 
         <div class="intro-name">
@@ -55,25 +55,25 @@
             <a class="text-decoration-remover" target="_blank" href="https://github.com/YanaTrifonova">
                 <img id="github" class="social-img" onmouseover="onEnter(this, 'github');"
                      onmouseout="onOut(this, 'github');"
-                     src="img/github_dark.svg" alt="github">
+                     src="images/github_dark.svg" alt="github">
             </a>
             <a class="text-decoration-remover" target="_blank"
                href="https://www.linkedin.com/in/yana-trifonova-0920b3179/">
                 <img id="linkedin" class="social-img" onmouseover="onEnter(this, 'linkedin');"
-                     onmouseout="onOut(this, 'linkedin');" src="img/linkedin_dark.svg" alt="linked in">
+                     onmouseout="onOut(this, 'linkedin');" src="images/linkedin_dark.svg" alt="linked in">
             </a>
             <a class="text-decoration-remover" target="_blank" href="https://www.instagram.com/yana_trifonova/">
                 <img id="instagram" class="social-img" onmouseover="onEnter(this, 'instagram');"
-                     onmouseout="onOut(this, 'instagram');" src="img/instagram_dark.svg" alt="instagram">
+                     onmouseout="onOut(this, 'instagram');" src="images/instagram_dark.svg" alt="instagram">
             </a>
             <a class="text-decoration-remover" href="mailto: trifonova.yana.prof@gmail.com">
                 <img id="mail" class="social-img" onmouseover="onEnter(this, 'mail');" onmouseout="onOut(this, 'mail');"
-                     src="img/mail_dark.svg" alt="e-mail">
+                     src="images/mail_dark.svg" alt="e-mail">
             </a>
         </div>
 
         <div id="scroll-item" class="intro-scroll-container">
-            <img class="intro-scroll-img intro-scroll-animation" src="img/mouse-clicker-dark.svg">
+            <img class="intro-scroll-img intro-scroll-animation" src="images/mouse-clicker-dark.svg">
         </div>
     </div>
 
@@ -94,7 +94,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item1" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img class="timeline-img" src="img/timeline/born.svg">
+                        <img class="timeline-img" src="images/timeline/born.svg">
                     </div>
                 </div>
 
@@ -104,7 +104,7 @@
                             class="text-decoration-remover text-decoration-underline">Yaroslavl, Russia<a
                             href="https://en.wikipedia.org/wiki/Yaroslavl"
                             target="_blank">
-                        <img class="external-link-img" src="img/external-link.svg"></a></span>.</p>
+                        <img class="external-link-img" src="images/external-link.svg"></a></span>.</p>
                 </div>
             </div>
 
@@ -124,7 +124,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item3" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img class="timeline-img" src="img/timeline/born.svg">
+                        <img class="timeline-img" src="images/timeline/born.svg">
                     </div>
                 </div>
 
@@ -165,7 +165,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item5" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img class="timeline-img" src="img/timeline/born.svg">
+                        <img class="timeline-img" src="images/timeline/born.svg">
                     </div>
                 </div>
 
@@ -251,7 +251,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item7" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img class="timeline-img" src="img/timeline/born.svg">
+                        <img class="timeline-img" src="images/timeline/born.svg">
                     </div>
                 </div>
 
@@ -301,7 +301,7 @@
             <div class="timeline-card-container">
                 <div id="timeline-img-item9" class="timeline-img-item">
                     <div class="timeline-img-item-decor card-decoration">
-                        <img class="timeline-img" src="img/timeline/born.svg">
+                        <img class="timeline-img" src="images/timeline/born.svg">
                     </div>
                 </div>
 
@@ -342,7 +342,7 @@
             <div id="moon-project" class="card card-decoration">
                 <p class="project-name">Moon Project</p>
                 <div class="project-img-holder">
-                    <img class="project-img" src="img/moon_project.jpg">
+                    <img class="project-img" src="images/moon_project.jpg">
                 </div>
                 <p class="section-card">Moon project was the first project that I made on my own. I just
                     watched plenty of online courses and read tons of documentation before working on it. I really proud of it because when
@@ -360,14 +360,14 @@
                     <a class="text-decoration-remover text-decoration-underline"
                        href="https://github.com/YanaTrifonova/moonProject"
                        target="_blank">
-                        <img class="project-link-img external-link-img" src="img/external-link.svg">Watch on Github</a>
+                        <img class="project-link-img external-link-img" src="images/external-link.svg">Watch on Github</a>
                 </div>
             </div>
 
             <div class="card card-decoration">
                 <p id="cocktail-blog" class="project-name">Cocktail blog</p>
                 <div class="project-img-holder">
-                    <img class="project-img" src="img/shark_logo.png">
+                    <img class="project-img" src="images/shark_logo.png">
                 </div>
                 <p class="section-card">Cocktail blog is a custom blog with  WYSIWYG editor summernote. I
                     was focused on interaction with Backend. I tried to apply BEM
@@ -386,21 +386,21 @@
                     <a class="text-decoration-remover text-decoration-underline"
                        href="https://github.com/YanaTrifonova/cocktail_blog"
                        target="_blank">
-                        <img class="project-link-img external-link-img" src="img/external-link.svg">Watch on Github</a>
+                        <img class="project-link-img external-link-img" src="images/external-link.svg">Watch on Github</a>
                 </div>
             </div>
 
             <div class="card card-decoration">
                 <p class="project-name">Burger</p>
                 <div class="project-img-holder">
-                    <img class="project-img" src="img/unnamed.png">
+                    <img class="project-img" src="images/unnamed.png">
                 </div>
                 <p class="section-card">Burger is my first project on <code class="code-text">TypeScript</code> with
                     <code class="code-text">React</code>. The idea of it is the same as in <a
                             class="text-decoration-remover text-decoration-underline"
                             href="https://youtu.be/dPgKf2EcEK0" target="_blank">
                         <img class="project-link-img external-link-img external-link-img-decor"
-                             src="img/external-link.svg">this video (You Tube)</a>.</p>
+                             src="images/external-link.svg">this video (You Tube)</a>.</p>
                 <p class="section-card">These technologies are probably an overkill but the project is great
                     sandbox to learn new languages and frameworks.</p>
                 <p class="section-card">Used technologies and languages:</p>
@@ -413,7 +413,7 @@
                 </ul>
                 <div class="project-link">
                     <a class="text-decoration-remover text-decoration-underline">
-                        <img class="project-link-img external-link-img" src="img/external-link.svg">Watch on Github
+                        <img class="project-link-img external-link-img" src="images/external-link.svg">Watch on Github
                         (still in development)</a>
                 </div>
             </div>
@@ -424,17 +424,17 @@
         <p class="footer-contact-me-text">Contact me:</p>
         <div class="footer-social">
             <a class="text-decoration-remover" target="_blank" href="https://github.com/YanaTrifonova">
-                <img class="social-img" src="img/github_dark.svg" alt="github">
+                <img class="social-img" src="images/github_dark.svg" alt="github">
             </a>
             <a class="text-decoration-remover" target="_blank"
                href="https://www.linkedin.com/in/yana-trifonova-0920b3179/">
-                <img class="social-img" src="img/linkedin_dark.svg" alt="linked in">
+                <img class="social-img" src="images/linkedin_dark.svg" alt="linked in">
             </a>
             <a class="text-decoration-remover" target="_blank" href="https://www.instagram.com/yana_trifonova/">
-                <img class="social-img" src="img/instagram_dark.svg" alt="instagram">
+                <img class="social-img" src="images/instagram_dark.svg" alt="instagram">
             </a>
             <a class="text-decoration-remover" href="mailto: trifonova.yana.prof@gmail.com">
-                <img class="social-img" src="img/mail_dark.svg" alt="e-mail">
+                <img class="social-img" src="images/mail_dark.svg" alt="e-mail">
             </a>
         </div>
     </footer>
