--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="description" content="my website">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="styles/normalize.css">
 
     <link rel="icon" type="image/png" href="favicon.ico"/>
 </head>
